<resources>
    <string name="app_name">CareerIntelligence</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1960878290831837</string>
    <string name="fb_login_protocol_scheme">fb1960878290831837</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="login_as">Login as:</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="job_seeker">Job Seeker</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="powered_by_altitude_technology">Powered by </string>

    <string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. . .</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_license">License Information</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Help</string>
    <string name="title_faq">FAQ</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_about">About</string>
    <string name="what_is_mcc">MCC is an online personality assessment program that matches personalities to specific career. MCC is suitable for youth from age 13 to adulthood. It is highly beneficial to undergraduates and postgraduates and those seeking to change careers regardless of age.</string>
    <string name="title_activity_pretdashboard">PRETDashboard</string>

</resources>
